--- a/companion/src/burndialog.ui
+++ b/companion/src/burndialog.ui
@@ -273,7 +273,7 @@
         </sizepolicy>
        </property>
        <property name="toolTip">
-        <string>Allows companion9x to write to older version of the firmware</string>
+        <string>Allows Companion to write to older version of the firmware</string>
        </property>
        <property name="text">
         <string>Check Firmware compatibility</string>
