--- a/companion/src/simulatordialog.ui
+++ b/companion/src/simulatordialog.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Companion9x Simulator</string>
+   <string>Companion Simulator</string>
   </property>
   <property name="windowIcon">
    <iconset resource="companion9x.qrc">
@@ -1092,6 +1092,7 @@ QPushButton:checked {
            </property>
           </widget>
          </item>
+
          <item row="0" column="4" rowspan="3">
           <widget class="menuWidget" name="menu" native="true">
            <property name="sizePolicy">
@@ -1810,6 +1811,7 @@ QPushButton:checked {
            <property name="frameShadow">
             <enum>QFrame::Raised</enum>
            </property>
+
            <property name="lineWidth">
             <number>2</number>
            </property>
@@ -2294,6 +2296,7 @@ border-radius: 4px;
          </item>
          <item row="0" column="0">
           <widget class="QLabel" name="label_ch01">
+
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
              <horstretch>0</horstretch>
