Fixed last companion9x strings. Getting very close.

--- a/companion/src/companion9x.qrc
+++ b/companion/src/companion9x.qrc
@@ -48,7 +48,7 @@
     <file>images/screenshot.png</file>
     <file>images/splash.png</file>
     <file>images/splasht.png</file>
-    <file>images/companion9x-title.png</file>
+    <file>images/companion-title.png</file>
     <file>images/read_eeprom.png</file>
     <file>images/write_eeprom.png</file>
     <file>images/write_flash.png</file>
