--- a/companion/src/modeledit/mixerdialog.ui
+++ b/companion/src/modeledit/mixerdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>367</width>
-    <height>475</height>
+    <width>342</width>
+    <height>434</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -20,7 +20,7 @@
    <string>Dialog</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="companion9x.qrc">
+   <iconset resource="../companion9x.qrc">
     <normaloff>:/icon.png</normaloff>:/icon.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout_3">
@@ -178,7 +178,142 @@ p, li { white-space: pre-wrap; }
    </item>
    <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,0,0">
-     <item row="12" column="1" colspan="2">
+     <item row="6" column="0">
+      <widget class="QLabel" name="label_MixDR">
+       <property name="text">
+        <string>Include DR/Expo</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="1">
+      <widget class="QCheckBox" name="FixOffsetChkB">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="0">
+      <widget class="QLabel" name="label_phases">
+       <property name="text">
+        <string>Flight modes</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_5">
+       <property name="text">
+        <string>Include Trim</string>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="0">
+      <widget class="QLabel" name="label_7">
+       <property name="text">
+        <string>Switch</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <widget class="QCheckBox" name="MixDR_CB">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QComboBox" name="curveTypeCB">
+       <property name="whatsThis">
+        <string>The curve used by the mix</string>
+       </property>
+      </widget>
+     </item>
+     <item row="10" column="1" colspan="2">
+      <widget class="QComboBox" name="warningCB">
+       <property name="whatsThis">
+        <string>Mixer warning.
+Setting this value will cause a beep to be emmitted when this value is active.</string>
+       </property>
+       <item>
+        <property name="text">
+         <string>OFF</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>1 Beep</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>2 Beep</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>3 Beep</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="7" column="0">
+      <widget class="QLabel" name="label_FixOffset">
+       <property name="text">
+        <string>Fix Offset</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QComboBox" name="trimCB">
+       <item>
+        <property name="text">
+         <string>No</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Yes</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="3" column="1" colspan="2">
+      <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0,0,1">
+       <item>
+        <widget class="QCheckBox" name="offsetGV">
+         <property name="text">
+          <string>GV</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="offsetCB">
+         <property name="whatsThis">
+          <string>The source for the mixer</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QSpinBox" name="offsetSB"/>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </item>
+     <item row="11" column="1" colspan="2">
       <widget class="QComboBox" name="mltpxCB">
        <property name="whatsThis">
         <string>Multiplexer
@@ -213,7 +348,7 @@ This determines how mixer values are added.
        </property>
       </widget>
      </item>
-     <item row="9" column="1" colspan="2">
+     <item row="8" column="1" colspan="2">
       <layout class="QGridLayout" name="gridLayout_4">
        <item row="0" column="0">
         <widget class="QLabel" name="lb_FP0">
@@ -370,14 +505,14 @@ This determines how mixer values are added.
        </item>
       </layout>
      </item>
-     <item row="11" column="0">
+     <item row="10" column="0">
       <widget class="QLabel" name="label_8">
        <property name="text">
         <string>Warning</string>
        </property>
       </widget>
      </item>
-     <item row="12" column="0">
+     <item row="11" column="0">
       <widget class="QLabel" name="label_9">
        <property name="text">
         <string>Multiplex</string>
@@ -415,160 +550,8 @@ This determines how mixer values are added.
      <item row="4" column="0">
       <widget class="QLabel" name="label_curve">
        <property name="text">
-        <string>Curve/Differential</string>
+        <string>Curve</string>
        </property>
-      </widget>
-     </item>
-     <item row="5" column="0">
-      <widget class="QLabel" name="label_5">
-       <property name="text">
-        <string>Include Trim</string>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="0">
-      <widget class="QLabel" name="label_FMtrim">
-       <property name="text">
-        <string>Enable FM Trim</string>
-       </property>
-      </widget>
-     </item>
-     <item row="9" column="0">
-      <widget class="QLabel" name="label_phases">
-       <property name="text">
-        <string>Flight modes</string>
-       </property>
-      </widget>
-     </item>
-     <item row="10" column="0">
-      <widget class="QLabel" name="label_7">
-       <property name="text">
-        <string>Switch</string>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="0">
-      <widget class="QLabel" name="label_MixDR">
-       <property name="text">
-        <string>Include DR/Expo</string>
-       </property>
-      </widget>
-     </item>
-     <item row="8" column="0">
-      <widget class="QLabel" name="label_FixOffset">
-       <property name="text">
-        <string>Fix Offset</string>
-       </property>
-      </widget>
-     </item>
-     <item row="11" column="1" colspan="2">
-      <widget class="QComboBox" name="warningCB">
-       <property name="whatsThis">
-        <string>Mixer warning.
-Setting this value will cause a beep to be emmitted when this value is active.</string>
-       </property>
-       <item>
-        <property name="text">
-         <string>OFF</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>1 Beep</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>2 Beep</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>3 Beep</string>
-        </property>
-       </item>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <widget class="QComboBox" name="curvesCB">
-       <property name="whatsThis">
-        <string>The curve used by the mix</string>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="1">
-      <widget class="QCheckBox" name="MixDR_CB">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="8" column="1">
-      <widget class="QCheckBox" name="FixOffsetChkB">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="1">
-      <widget class="QCheckBox" name="FMtrimChkB">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1" colspan="2">
-      <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0,0,1">
-       <item>
-        <widget class="QCheckBox" name="offsetGV">
-         <property name="text">
-          <string>GV</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QComboBox" name="offsetCB">
-         <property name="whatsThis">
-          <string>The source for the mixer</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QSpinBox" name="offsetSB"/>
-       </item>
-       <item>
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
-     </item>
-     <item row="5" column="1">
-      <widget class="QComboBox" name="trimCB">
-       <item>
-        <property name="text">
-         <string>No</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Yes</string>
-        </property>
-       </item>
       </widget>
      </item>
      <item row="2" column="1" colspan="2">
@@ -605,7 +588,7 @@ Setting this value will cause a beep to be emmitted when this value is active.</
        </item>
       </layout>
      </item>
-     <item row="10" column="1" colspan="2">
+     <item row="9" column="1" colspan="2">
       <widget class="QComboBox" name="switchesCB">
        <property name="whatsThis">
         <string>Switch used by the mix.
@@ -623,21 +606,21 @@ If blank then the mix is considered to be &quot;ON&quot; all the time.</string>
      <item row="4" column="2">
       <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,0,0">
        <item>
-        <widget class="QCheckBox" name="differentialGV">
+        <widget class="QCheckBox" name="curveGVarCB">
          <property name="text">
           <string>GV</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="differentialCB">
+        <widget class="QComboBox" name="curveValueCB">
          <property name="whatsThis">
           <string>The source for the mixer</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QSpinBox" name="differentialSB"/>
+        <widget class="QSpinBox" name="curveValueSB"/>
        </item>
       </layout>
      </item>
@@ -646,7 +629,7 @@ If blank then the mix is considered to be &quot;ON&quot; all the time.</string>
   </layout>
  </widget>
  <resources>
-  <include location="companion9x.qrc"/>
+  <include location="../companion9x.qrc"/>
  </resources>
  <connections>
   <connection>
