--- a/companion/src/companion9x.qrc
+++ b/companion/src/companion9x.qrc
@@ -40,6 +40,7 @@
     <file>images/copy.png</file>
     <file>images/cut.png</file>
     <file>images/currentmodel.png</file>
+    <file>images/information.png</file>
     <file>images/new.png</file>
     <file>images/open.png</file>
     <file>images/paste.png</file>
