--- a/companion/src/comparedialog.ui
+++ b/companion/src/comparedialog.ui
@@ -29,7 +29,7 @@
    <string>Dialog</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="companion9x.qrc">
+   <iconset resource="companion.qrc">
     <normaloff>:/images/print.png</normaloff>:/images/print.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout">
@@ -129,7 +129,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="companion9x.qrc"/>
+  <include location="companion.qrc"/>
  </resources>
  <connections>
   <connection>
