--- a/companion/src/joystickdialog.ui
+++ b/companion/src/joystickdialog.ui
@@ -909,7 +909,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="companion9x.qrc"/>
+  <include location="companion.qrc"/>
  </resources>
  <connections/>
 </ui>
