--- a/companion/src/xsimulatordialog.ui
+++ b/companion/src/xsimulatordialog.ui
@@ -26,7 +26,7 @@
    <string>Companion Simulator</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="companion9x.qrc">
+   <iconset resource="companion.qrc">
     <normaloff>:/images/simulate.png</normaloff>:/images/simulate.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout_6">
@@ -2054,6 +2054,7 @@ border-radius: 4px;
              <height>18</height>
             </size>
 
+
            </property>
            <property name="styleSheet">
             <string notr="true">QSlider::sub-page:horizontal:disabled {
@@ -3901,7 +3902,7 @@ border-radius: 4px;
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="companion9x.qrc"/>
+  <include location="companion.qrc"/>
  </resources>
  <connections/>
 </ui>
