--- a/companion/src/burndialog.ui
+++ b/companion/src/burndialog.ui
@@ -456,7 +456,7 @@
              <string>...</string>
             </property>
             <property name="icon">
-             <iconset resource="companion9x.qrc">
+             <iconset resource="companion.qrc">
               <normaloff>:/images/library.png</normaloff>:/images/library.png</iconset>
             </property>
             <property name="iconSize">
@@ -488,7 +488,7 @@
   <tabstop>BurnFlashButton</tabstop>
  </tabstops>
  <resources>
-  <include location="companion9x.qrc"/>
+  <include location="companion.qrc"/>
  </resources>
  <connections/>
 </ui>
