--- a/companion/src/customizesplashdialog.ui
+++ b/companion/src/customizesplashdialog.ui
@@ -71,7 +71,7 @@
           <string/>
          </property>
          <property name="pixmap">
-          <pixmap resource="companion9x.qrc">:/images/customize.png</pixmap>
+          <pixmap resource="companion.qrc">:/images/customize.png</pixmap>
          </property>
          <property name="scaledContents">
           <bool>true</bool>
@@ -212,7 +212,7 @@ p, li { white-space: pre-wrap; }
         <string>...</string>
        </property>
        <property name="icon">
-        <iconset resource="companion9x.qrc">
+        <iconset resource="companion.qrc">
          <normaloff>:/images/library.png</normaloff>:/images/library.png</iconset>
        </property>
        <property name="iconSize">
@@ -264,7 +264,7 @@ p, li { white-space: pre-wrap; }
   </layout>
  </widget>
  <resources>
-  <include location="companion9x.qrc"/>
+  <include location="companion.qrc"/>
  </resources>
  <connections/>
 </ui>
