--- a/companion/src/printdialog.ui
+++ b/companion/src/printdialog.ui
@@ -26,7 +26,7 @@
    <string>Dialog</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="companion9x.qrc">
+   <iconset resource="companion.qrc">
     <normaloff>:/images/print.png</normaloff>:/images/print.png</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -78,7 +78,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="companion9x.qrc"/>
+  <include location="companion.qrc"/>
  </resources>
  <connections>
   <connection>
