--- a/companion/src/splashlibrary.ui
+++ b/companion/src/splashlibrary.ui
@@ -47,7 +47,7 @@
       <string>...</string>
      </property>
      <property name="icon">
-      <iconset resource="companion9x.qrc">
+      <iconset resource="companion.qrc">
        <normaloff>:/images/arrow-left.png</normaloff>:/images/arrow-left.png</iconset>
      </property>
      <property name="iconSize">
@@ -946,7 +946,7 @@
       <string>...</string>
      </property>
      <property name="icon">
-      <iconset resource="companion9x.qrc">
+      <iconset resource="companion.qrc">
        <normaloff>:/images/arrow-right.png</normaloff>:/images/arrow-right.png</iconset>
      </property>
      <property name="iconSize">
@@ -967,7 +967,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="companion9x.qrc"/>
+  <include location="companion.qrc"/>
  </resources>
  <connections/>
 </ui>
