--- a/companion/src/comparedialog.ui
+++ b/companion/src/comparedialog.ui
@@ -30,7 +30,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="companion.qrc">
-    <normaloff>:/images/print.png</normaloff>:/images/print.png</iconset>
+    <normaloff>:/icon.png</normaloff>:/icon.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
