--- a/companion/src/mdichild.ui
+++ b/companion/src/mdichild.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string/>
   </property>
+  <property name="windowIcon">
+   <iconset resource="companion.qrc">
+    <normaloff>:/icon.png</normaloff>:/icon.png</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="ModelsListWidget" name="modelsList"/>
@@ -21,10 +25,6 @@
     <widget class="QPushButton" name="SimulateTxButton">
      <property name="text">
       <string>Simulate Tx</string>
-     </property>
-     <property name="icon">
-      <iconset resource="companion.qrc">
-       <normaloff>:/images/simulate.png</normaloff>:/images/simulate.png</iconset>
      </property>
     </widget>
    </item>
